cpp/gigasecond/run-tests-cpp.txt
Running automated test file(s):


===============================================================================

Running: make clean
rm -rf ./build

real	0m0.008s
user	0m0.001s
sys	0m0.007s

===============================================================================

export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"

===============================================================================

Running: make coverage | ansifilter
rm -rf ./build
mkdir -pv ./build
mkdir: created directory './build'

cd ./build; export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"; cmake -DEXERCISM_RUN_ALL_TESTS=1 -DCMAKE_EXPORT_COMPILE_COMMANDS=1 -G 'Unix Makefiles' ../; if make; then printf "\n=== All Tests Passed ===\n"; else printf "\n=== Test Failure ===\n"; false; fi
-- The CXX compiler identification is GNU 10.2.1
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Found Boost: /usr/lib/x86_64-linux-gnu/cmake/Boost-1.81.0/BoostConfig.cmake (found suitable version "1.81.0", minimum required is "1.58") found components: date_time 
-- Configuring done
-- Generating done
-- Build files have been written to: /home/vpayno/git_vpayno/exercism-workspace/cpp/gigasecond/build
make[1]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/gigasecond/build'
make[2]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/gigasecond/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/gigasecond/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/gigasecond/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/gigasecond/build'
[ 25%] Building CXX object CMakeFiles/gigasecond.dir/gigasecond_test.cpp.o
[ 50%] Building CXX object CMakeFiles/gigasecond.dir/gigasecond.cpp.o
[ 75%] Building CXX object CMakeFiles/gigasecond.dir/test/tests-main.cpp.o
[100%] Linking CXX executable gigasecond
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/gigasecond/build'
[100%] Built target gigasecond
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/gigasecond/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/gigasecond/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/gigasecond/build'
===============================================================================
All tests passed (5 assertions in 5 test cases)

make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/gigasecond/build'
[100%] Built target test_gigasecond
make[2]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/gigasecond/build'
make[1]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/gigasecond/build'

=== All Tests Passed ===

find . -regextype posix-egrep -regex "^.*(tests-main|CompilerId).*[.](gcda|gcno)$" -print -delete
./build/CMakeFiles/3.22.2/CompilerIdCXX/CMakeCXXCompilerId.gcno
./build/CMakeFiles/gigasecond.dir/test/tests-main.cpp.gcno
./build/CMakeFiles/gigasecond.dir/test/tests-main.cpp.gcda

find . -regextype posix-egrep -regex "^.*[.](gcda|gcno)26387"

gcovr --print-summary
------------------------------------------------------------------------------
                           GCC Code Coverage Report
Directory: .
------------------------------------------------------------------------------
File                                       Lines    Exec  Cover   Missing
------------------------------------------------------------------------------
gigasecond.cpp                                 3       3   100%   
gigasecond_test.cpp                           25      25   100%   
test/catch.hpp                                39      27    69%   1448-1450,1617-1618,1621-1622,1642-1643,2227,2229,2560
------------------------------------------------------------------------------
TOTAL                                         67      55    82%
------------------------------------------------------------------------------
lines: 82.1% (55 out of 67)
branches: 39.0% (53 out of 136)

real	0m12.631s
user	0m11.648s
sys	0m0.979s

===============================================================================

cmake-format --in-place CMakeLists.txt

real	0m0.153s
user	0m0.108s
sys	0m0.048s

===============================================================================

cmake-lint CMakeLists.txt
CMakeLists.txt
==============
CMakeLists.txt:11,04: [C0103] Invalid directory variable name "Boost_USE_MULTITHREADED" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:12,04: [C0103] Invalid directory variable name "Boost_USE_STATIC_RUNTIME" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:20,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:22,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:69,70: [C0307] Bad indentation:
                                               )
  ^----BodyNode: 1:0->IfBlockNode: 67:0->BodyNode: 67:11->StatementNode: 68:2->TreeNode: 69:70

CMakeLists.txt:74,02: [C0113] Missing COMMENT in statement which allows it

Summary
=======
files scanned: 1
found lint:
  Convention: 6


real	0m0.160s
user	0m0.116s
sys	0m0.046s

===============================================================================

Running: clang-format-16 -style=file -i ./gigasecond.cpp ./gigasecond_test.cpp ./gigasecond.h

real	0m0.022s
user	0m0.008s
sys	0m0.014s

===============================================================================

Running: ../../.github/citools/cpp/clang-check
clang-check-16 --analyze ./gigasecond.cpp ./gigasecond_test.cpp ./gigasecond.h
error: argument unused during compilation: '-stdlib=libstdc++' [-Werror,-Wunused-command-line-argument]
error: invalid argument '-std=c++17' not allowed with 'C'
In file included from /home/vpayno/git_vpayno/exercism-workspace/cpp/gigasecond/gigasecond.h:4:
In file included from /usr/include/boost/date_time/posix_time/posix_time.hpp:14:
/usr/include/boost/date_time/compiler_config.hpp:11:10: fatal error: 'cstdlib' file not found
#include <cstdlib>
         ^~~~~~~~~
1 error generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/gigasecond/gigasecond.h.

real	0m3.722s
user	0m3.601s
sys	0m0.120s


real	0m3.724s
user	0m3.603s
sys	0m0.120s

===============================================================================

Running: ../../.github/citools/cpp/clang-tidy | head -n 100
53446 warnings generated.
113040 warnings generated.
129514 warnings and 3 errors generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/gigasecond/gigasecond.h.
Suppressed 129519 warnings (129514 in non-user code, 5 NOLINT).
Use -header-filter=.* to display errors from all non-system headers. Use -system-headers to display errors from system headers as well.
Found compiler error(s).

real	0m24.047s
user	0m23.877s
sys	0m0.168s
Running: clang-tidy-16 ./gigasecond.cpp ./gigasecond_test.cpp ./gigasecond.h
error: invalid argument '-std=c++17' not allowed with 'C' [clang-diagnostic-error]
error: argument unused during compilation: '-stdlib=libstdc++' [clang-diagnostic-unused-command-line-argument]
/usr/include/boost/date_time/compiler_config.hpp:11:10: error: 'cstdlib' file not found [clang-diagnostic-error]
#include <cstdlib>
         ^~~~~~~~~


real	0m24.048s
user	0m23.878s
sys	0m0.170s

===============================================================================

